fixed filter dialogs overlapping issue

--- a/src/css/webflow.css
+++ b/src/css/webflow.css
@@ -895,9 +895,6 @@ textarea.w-select {
 .w-widget-twitter-count-shim.w--vertical.w--large {
   width: 76px;
 }
-.w-widget-gplus {
-  overflow: hidden;
-}
 .w-background-video {
   position: relative;
   overflow: hidden;
